--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -8,7 +8,7 @@
             <input
                 matInput
                 placeholder="Search Station Name"
-                [(ngModel)]="filterName"
+                [(ngModel)]="name"
             />
         </mat-form-field>
         <mat-form-field appearance="outline" floatLabel="always">
