--- a/src/app/modules/admin/station-details/station-details.component.html
+++ b/src/app/modules/admin/station-details/station-details.component.html
@@ -129,7 +129,7 @@
                     ></mat-slide-toggle>
                     <div class="rating">
                         <mat-icon color="warn">star</mat-icon>
-                        <span>{{ station.rating }}</span>
+                        <span class="text-[#191919] font-medium text-[12px]">{{ station.average_rating }}</span>
                     </div>
                 </div>
             </div>
