--- a/src/app/modules/admin/station-details/station-details.component.html
+++ b/src/app/modules/admin/station-details/station-details.component.html
@@ -100,7 +100,11 @@
                                 }})
                             }
                         </span>
-                        <span class="status available">{{
+                        <span class="status" [ngClass]="{
+                            'available': station.status === 'Available',
+                            'in-use': station.status === 'InUse',
+                            'unavailable': station.status === 'Unavailable'
+                          }">{{
                             station.status
                         }}</span>
                     </h2>
