--- a/src/app/modules/admin/station-details/station-details.component.scss
+++ b/src/app/modules/admin/station-details/station-details.component.scss
@@ -61,6 +61,30 @@
   vertical-align: middle;
 }
 
+.status.in-use {
+  background: #ff9100;
+  color: #fff;
+  font-size: 0.95rem;
+  border-radius: 6px;
+  padding: 2px 10px;
+  margin-left: 8px;
+  font-weight: 500;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.status.unavailable {
+  background: #f44336;
+  color: #fff;
+  font-size: 0.95rem;
+  border-radius: 6px;
+  padding: 2px 10px;
+  margin-left: 8px;
+  font-weight: 500;
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .address {
   color: #666;
   font-size: 1rem;
