--- a/src/app/modules/admin/station-details/components/reviews-tab/reviews-tab.component.html
+++ b/src/app/modules/admin/station-details/components/reviews-tab/reviews-tab.component.html
@@ -1,7 +1,7 @@
 <div class="reviews-container">
   <div class="reviews-header">
     <span class="reviews-title">Reviews</span>
-    <span class="reviews-count">(350 Reviews)</span>
+    <span class="reviews-count">({{reviews?.length}} Reviews)</span>
   </div>
   <div class="reviews-list">
     <div class="review-item" *ngFor="let review of reviews">
