--- a/src/app/modules/shared/components/data-table/data-table.component.html
+++ b/src/app/modules/shared/components/data-table/data-table.component.html
@@ -1,4 +1,4 @@
-<div class="rounded-lg overflow-hidden">
+<div class="rounded-lg overflow-x-auto">
     <!-- Empty state -->
     <div *ngIf="!loading && (!data || data.length === 0)" class="flex flex-col items-center justify-center p-8">
         <mat-icon class="text-gray-400 text-6xl mb-4">inbox</mat-icon>
