--- a/src/app/modules/customers/components/transaction-modal/transaction-modal.component.html
+++ b/src/app/modules/customers/components/transaction-modal/transaction-modal.component.html
@@ -1,5 +1,5 @@
-<div class="w-full max-w-6xl">
-    <div class="flex items-center justify-between p-6 border-b">
+<div class="w-full max-w-6xl flex flex-col h-[90vh]">
+    <div class="flex items-center justify-between p-6 border-b flex-shrink-0">
         <div>
             <h2 class="text-2xl font-semibold">Customer Transactions</h2>
             <p class="text-gray-600 mt-1">{{ customer.name }} - {{ customer.email }}</p>
@@ -9,7 +9,7 @@
         </button>
     </div>
 
-    <div class="p-6">
+    <div class="flex-1 overflow-y-auto p-6">
         <!-- Filter Form -->
         <form [formGroup]="filterForm" class="mb-6 p-4 bg-gray-50 rounded-lg">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
@@ -63,6 +63,14 @@
                 </div>
             } @else {
                 <table mat-table [dataSource]="transactions" class="w-full">
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="id">
+                        <th mat-header-cell *matHeaderCellDef>ID</th>
+                        <td mat-cell *matCellDef="let transaction">
+                            {{ transaction.id }}
+                        </td>
+                    </ng-container>
+
                     <!-- Type Column -->
                     <ng-container matColumnDef="type">
                         <th mat-header-cell *matHeaderCellDef>Type</th>
@@ -79,24 +87,8 @@
                         <td mat-cell *matCellDef="let transaction">
                             <span [class.text-green-600]="transaction.type === 'credit' || transaction.type === 'refund'"
                                   [class.text-red-600]="transaction.type === 'debit' || transaction.type === 'charge'">
-                                {{ formatCurrency(transaction.amount) }}
+                                {{ transaction.amount }} EGP
                             </span>
-                        </td>
-                    </ng-container>
-
-                    <!-- Balance Before Column -->
-                    <ng-container matColumnDef="balance_before">
-                        <th mat-header-cell *matHeaderCellDef>Balance Before</th>
-                        <td mat-cell *matCellDef="let transaction">
-                            {{ formatCurrency(transaction.balance_before) }}
-                        </td>
-                    </ng-container>
-
-                    <!-- Balance After Column -->
-                    <ng-container matColumnDef="balance_after">
-                        <th mat-header-cell *matHeaderCellDef>Balance After</th>
-                        <td mat-cell *matCellDef="let transaction">
-                            {{ formatCurrency(transaction.balance_after) }}
                         </td>
                     </ng-container>
 
@@ -125,6 +117,7 @@
                     <div class="w-full flex justify-center p-4 border-t">
                         <app-pagination
                             [meta]="transactionsMeta"
+                            [currentPage]="params.page"
                             (pageChange)="pageChanger($event)"
                             (pageSizeChange)="onPageSizeChange($event)"
                             [per_page]="params.per_page">
@@ -135,7 +128,7 @@
         </div>
     </div>
 
-    <div class="flex justify-end p-6 border-t">
+    <div class="flex justify-end p-6 border-t flex-shrink-0">
         <button mat-button (click)="close()">Close</button>
     </div>
 </div>
