--- a/src/app/modules/admin/stations/station-card.component.html
+++ b/src/app/modules/admin/stations/station-card.component.html
@@ -2,12 +2,12 @@
   <div
     class="station-card-status"
     [ngClass]="{
-      'available': station.status === 'Available',
-      'in-use': station.status === 'InUse',
-      'unavailable': station.status === 'Unavailable'
+      'available': station.is_active && station.status === 'Available',
+      'in-use': station.is_active && station.status === 'InUse',
+      'unavailable': !station.is_active || station.status === 'Unavailable'
     }"
   >
-    {{ station.status === 'Available' ? 'Available' : (station.status === 'InUse' ? 'In Use' : 'Unavailable') }}
+    {{ !station.is_active ? 'Disabled' : (station.status === 'Available' ? 'Available' : (station.status === 'InUse' ? 'In Use' : 'Unavailable')) }}
   </div>
   <div class="station-card-image">
     <img [src]="station.image || '/megaplug/ev-station-placeholder.svg'" alt="Station Image" />
