--- a/src/app/modules/customers/components/transaction-modal/transaction-modal.component.html
+++ b/src/app/modules/customers/components/transaction-modal/transaction-modal.component.html
@@ -17,14 +17,14 @@
                     <mat-label>From Date</mat-label>
                     <input matInput [matDatepicker]="fromPicker" formControlName="from_date">
                     <mat-datepicker-toggle matIconSuffix [for]="fromPicker"></mat-datepicker-toggle>
-                    <mat-datepicker #fromPicker></mat-datepicker>
+                    <mat-datepicker #fromPicker [restoreFocus]="false"></mat-datepicker>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                     <mat-label>To Date</mat-label>
                     <input matInput [matDatepicker]="toPicker" formControlName="to_date">
                     <mat-datepicker-toggle matIconSuffix [for]="toPicker"></mat-datepicker-toggle>
-                    <mat-datepicker #toPicker></mat-datepicker>
+                    <mat-datepicker #toPicker [restoreFocus]="false"></mat-datepicker>
                 </mat-form-field>
 
                 <div class="flex items-center gap-2">
